// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text align 1`] = `
<Text
  color="#161616"
  fontFamily="OpenSans-Regular"
  style={
    Array [
      Object {
        "color": "#161616",
        "fontFamily": "OpenSans-Regular",
        "textAlign": "left",
      },
      undefined,
    ]
  }
  testID="my-text"
  textAlign="left"
>
  Text Content
</Text>
`;

exports[`Text basic 1`] = `
<Text
  color="#161616"
  fontFamily="OpenSans-Regular"
  fontSize={12}
  style={
    Array [
      Object {
        "color": "#161616",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 12,
      },
      undefined,
    ]
  }
  testID="my-text"
>
  Text Content
</Text>
`;

exports[`Text category 1`] = `
<Text
  category="md"
  color="#161616"
  fontFamily="OpenSans-Regular"
  style={
    Array [
      Object {
        "color": "#161616",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 14,
      },
      undefined,
    ]
  }
  testID="my-text"
>
  Text Content
</Text>
`;

exports[`Text color 1`] = `
<Text
  color="#FECF28"
  fontFamily="OpenSans-Regular"
  style={
    Array [
      Object {
        "color": "#FECF28",
        "fontFamily": "OpenSans-Regular",
      },
      undefined,
    ]
  }
  testID="my-text"
>
  Text Content
</Text>
`;
